# actions

./: .actrc  .bazelrc  .gitignore  .hall-local.md  .secrets.example  .yamllint.yml  ASSIGNMENT.md  CLAUDE.md  Dockerfile  README.md  TESTING.md  WORKSPACE  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/build-bazel/: action.yml
.github/actions/changes-filter/: action.yml  match-paths.py
.github/actions/generate-coverage/: action.yml
.github/actions/lint-check/: action.yml
.github/actions/pr-comment-trigger/: action.yml
.github/actions/pr-comment-trigger-finish-checks/: action.yml
.github/actions/pr-comment-trigger-start-checks/: action.yml
.github/actions/pr-comment-trigger/finish/: action.yml
.github/actions/pr-comment-trigger/start/: action.yml
.github/actions/push-container/: action.yml
.github/actions/smoke-test-uv/: action.yml
.github/actions/test-uv/: action.yml
.github/workflows/: actions-checks.yml  bazel-pipeline.yml  docs-deploy.yml  lint-python.yml  python-coverage.yml  release-container.yml  release-python.yml  test-bazel-pipeline.yml  test-changes-filter.yml  test-python-pipeline.yml  test-release-container.yml
tests/fixtures/bazel-workspace/: BUILD
tests/fixtures/events/: push-tag.json
tests/fixtures/sample-package/: pyproject.toml
tests/fixtures/sample-package/tests/: test_sample.py
