[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample"
version = "0.1.0"
description = "Minimal fixture package for CI smoke testing"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
